@@ -15,11 +15,17 @@
 	    
 	    <h1>About</h1>
 	    
-	    <p>OpenFlights is a tool that lets you map your flights around the world, search and filter them in all sorts of interesting ways, and calculate statistics automatically.  It's also the name of the open-source project to build the tool.  Read more about it in the <a href="faq.html">FAQ</a>.</p>
+	    <p>OpenFlights is a tool that lets you map your flights around the world, search and filter them in all sorts of interesting ways, calculate statistics automatically, and share your flights and trips with friends and the entire world (if you wish).  It's also the name of the open-source project to build the tool.  Read more about it in the <a href="faq.html">FAQ</a>.</p>
 
 	    <p>OpenFlights is presently a <b>gamma</b> release &mdash; that means the site is now open to the public and the basic features are all there, but work is still in progress on adding new features.  If you'd like to be informed about the official launch, <a href="contact.html">drop us a line</a>.</p>
 
 	    <h2>Credits</h2>
+
+	    <p>Open-source packages used to create this software include
+	      <a href="http://openlayers.org">OpenLayers</a>,
+	      <a href="http://yoast.com/articles/sortable-table/">Sortable Table</a>,
+	      <a href="http://www.garrett.nildram.co.uk/calendar/scw.htm">Simple Calendar Widget</a> and
+	      <a href="http://simplehtmldom.sourceforge.net/">PHP Simple HTML DOM Parser</a>.</p>
 
 	    <p>Special thanks to the OpenFlights beta testing team of <a href="http://flyertalk.com">FlyerTalk</a> users <b>FCYTravis, KiwiFlyer, marc, sbm12</b> and <b>trsqr</b>.</p>
 
