@@ -51,7 +51,22 @@
 
 	    <h4>How much does it cost?</h4>
 
-	    <p>Using the website costs you <i>absolutely nothing</i>.  We've got to pay our bandwidth bills somehow though, so OpenFlights.org reserves the future right to add (unobtrusive) advertising to the site and to nag heavy users for donations.</p>
+	    <p>Using the website costs you <i>absolutely nothing</i>.  We've got to pay our bandwidth bills somehow though, so we're trying out Google ads and we reserve the right to nag heavy users for donations at some point in the future.</p>
+
+	    <p>If you'd like to donate now, just click on the button!  PayPal, Visa, MC, Amex, Discover accepted.
+<form action="https://www.paypal.com/cgi-bin/webscr" method="post">
+<input type="hidden" name="cmd" value="_donations">
+<input type="hidden" name="business" value="jani@contentshare.sg">
+<input type="hidden" name="item_name" value="OpenFlights.org">
+<input type="hidden" name="no_shipping" value="0">
+<input type="hidden" name="no_note" value="1">
+<input type="hidden" name="currency_code" value="USD">
+<input type="hidden" name="tax" value="0">
+<input type="hidden" name="bn" value="PP-DonationsBF">
+<input type="image" src="https://www.paypal.com/en_US/i/btn/btn_donate_SM.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+<img alt="" border="0" src="https://www.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1">
+</form>
+	    </p>
 
 	    <h4>Are you sure this thing will scale?</h4>
 
