@@ -1,7 +1,7 @@
 	  <center>
 	    <a href="/"><img src="/img/openflights-logo.png" width="220" height="31" style="margin: 10px 10px 0px 10px"/></a><br>
 	    <h6> <a href="/about.html">About</a> | 
-	      <a id="helplink" href="#help" onclick="JavaScript:showHelp();">Help</a> |
+	      <a id="helplink" href="#help" onclick="JavaScript:openPane('help');">Help</a> |
 	      <a href="/faq.html">FAQ</a> |
 	      <a href="/contact.html">Contact</a></h6>
 	  </center>
